[project]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Divyanshu9382",email = "divyanshu9382@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "langchain-google-vertexai (>=3.0.3,<4.0.0)",
    "langgraph (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
